--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-
+server.port=8189
+server.servlet.context-path=/app
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.thymeleaf.encoding=UTF-8
+# Hibernate
+hibernate.dialect:org.hibernate.dialect.PostgreSQL94Dialect
+hibernate.show_sql:true
+hibernate.hbm2ddl.auto:create
+entitymanager.packagesToScan:com.gb.dz14
